--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,21 @@
 /* Universal Styles */
+
+body{
+  margin: 0;
+  font-family: "Georgia", serif;
+  font-size: 17px;
+  color: black;
+}
+
 a{
   color: black;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 nav span {
@@ -8,16 +23,48 @@ nav span {
   padding: 20px 10px;
 }
 
+/*News stories */
+.stories{
+  display:flex;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
+.stories .text-content{
+  height: 250px;
+}
+
+.story{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.narrative{
+  margin-top: 16px;
+}
+
+.image-content{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
 /* Header Elements */
 header {
   display:flex;
-  justify-content: space-between;
-  align-items: center;
-  /* position: fixed;
-  Z-index: 1;
-  width: 100%
+  position:fixed;
+  z-index: 1;
+  width:100%;
   height: 80px;
-  background-color: white; */
+  background-color: white;
+  align-items: center;
   font-family: Verdana, sans-serif;
   font-size: 14px;
   font-weight: bold;
@@ -27,7 +74,7 @@ header {
 .logo{
   display: flex;
   align-items: center;
-  /* flex-grow: 1; */
+  flex-grow: 1;
   padding-left: 30px;
 }
 
@@ -47,25 +94,111 @@ padding-right: 40px;
 
 /* Main Articles */
 
+.content{
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
 .column{
   display: flex;
-  border: 2px solid black;
+  flex-direction: column;
+  margin-right: 32px;
 }
 
-.column large{
-  display: flex;
+/* First column */
+.column.large{
   width: 630px;
-  border: 1px solid black;
 }
 
-.column medium{
-  display: flex;
+.lead-story .image-content{
+  background-image: url(../resources/mother.png);
+  width: 630px;
+  margin-top: 0;
+  text-align: left;
+  font-size: 40px;
+}
+
+.lead-story .image-content span{
+  margin-left: 20px;
+}
+
+.fall-cancelled.image-content{
+  background-image: url(../resources/earth.png);
+}
+
+.pop-culture.image-content{
+  background-image:url(../resources/research.png);
+}
+
+/* medium column */
+
+.column .medium{
   width: 300px;
-  border: 1px solid black;
 }
 
-.column small{
-  display: flex;
+.cat-ceo.image-content{
+  background-image: url(../resources/cat.png);
+}
+
+/* small column */
+
+.column .small{
   width: 240px;
-  border: 1px solid black;
+}
+
+img.cookie{
+  height: 240px;
+}
+
+.news-bites h3{
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.news-bites .bite{
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  color: DimGray;
+}
+
+.bite span{
+  padding-left: 11px;
+}
+
+/*footer*/
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+}
+
+footer .title{
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: Georgia, serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav{
+  display: inline-block;
+  padding-left: 25px;
 }
